wrong color fixed

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@
   --color-primary-variant: #049c8d;
   --color-on-primary: #130e18;
   --color-secondary: #bb86fc;
-  --color-on-secondary: #905ad3;
+  --color-secondar-variant: #905ad3;
+  --color-on-secondary: #130e18;
   --color-white: #ffffff;
   --color-light: rgb(255,255,255,0.6)
 
